Overflow fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,6 +41,8 @@ h3 {
   margin: 0 auto;
   padding: 0 20px;
   text-align: center;
+  height: 100%;
+  padding-bottom: 50px;
 }
 
 .header {
@@ -208,10 +210,19 @@ h3 {
   font-size: 1.3rem;
 }
 
+.ticket-id {
+  overflow: scroll;
+}
+
+.ticket-head {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .ticket,
 .ticket-headings {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   justify-content: space-between;
   align-items: center;
@@ -230,8 +241,8 @@ h3 {
   background-color: #333;
   color: #fff;
   width: 100px;
-  padding: 0 20px;
-  justify-self: center;
+  padding: 0 23px;
+  justify-self: end;
   border-radius: 10px;
   font-size: 16px;
   text-align: center;
@@ -241,6 +252,7 @@ h3 {
   background-color: green;
   color: #fff;
   border-radius: 10px;
+  padding: 0 32px;
 }
 
 .status-open {
